--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,59 @@
+version: '3.8'
+
 services:
-  redis: 
-    image: redis:alpine
-    networks :
-      - faq_app_network
-  
-  web:
-    build : .
-    command : python manage.py runserver 0.0.0.0:8000
-    volumes :
-      - .:/app
-    ports : 
-      - "8000:8000"
-    depends_on :
-      - redis
+  db:
+    image: postgres:14
+    container_name: postgres-db
+    restart: always
+    environment:
+      POSTGRES_DB: mydatabase
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - faq_app_network
-volumes :
-  sqlite_data:
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U myuser -d mydatabase"]
+      interval: 5s
+      retries: 5
+
+  redis: 
+    image: redis:alpine
+    container_name: redis-server
+    networks:
+      - faq_app_network
+
+  web:
+    build: .
+    container_name: django-app
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - .:/app
+    ports: 
+      - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    environment:
+      - DATABASE_NAME=mydatabase
+      - DATABASE_USER=myuser
+      - DATABASE_PASSWORD=mypassword
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    networks:
+      - faq_app_network
+
+volumes:
+  postgres_data:
 
 networks:
   faq_app_network:
